mts/mts-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mts-admin
  namespace: mts
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: mts-admin
  template:
    metadata:
      labels:
        app: mts-admin
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: mts-admin
          image: ghcr.io/loxymartin/mts-admin:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
