mts/mts-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mts-api
  namespace: mts
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: mts-api
  template:
    metadata:
      labels:
        app: mts-api
    spec:
      containers:
        - name: mts-api
          image: ghcr.io/loxymartin/mts-api:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
