mts/mts-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mts-worker
  namespace: mts
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: mts-worker
  template:
    metadata:
      labels:
        app: mts-worker
    spec:
      containers:
        - name: mts-worker
          image: ghcr.io/loxymartin/mts-worker:latest
          ports:
            - containerPort: 5081
          livenessProbe:
            httpGet:
              path: /health
              port: 5081
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 5081
            initialDelaySeconds: 10
            periodSeconds: 10
