mts/mts-admin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mts-admin
  namespace: mts
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: mts-admin
