mts/mts-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mts-api
  namespace: mts
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: mts-api
